--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,13 @@
 language: go
 
 go:
-- "1.9"
-- "1.10"
+  - "1.18"
+  - "1.19"
 
-sudo: required
+env:
+  - GO111MODULE=on
 
-services:
-- docker
+script: go mod tidy && go test -v ./
 
-cache:
-  directories:
-  - vendor
-
-before_install:
-- go get -u github.com/golang/dep/cmd/dep
-- go get -u github.com/golang/lint/golint
-- export PATH=$PWD/bin:$PATH
-
-install:
-- dep ensure -v
-
-script:
-- golint -set_exit_status
-- go vet -v
-- go test -race -coverprofile=coverage.txt -covermode=atomic
-
-after_success:
-- bash <(curl -s https://codecov.io/bash)
+notifications:
+  email: false
